--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,10 @@ updates:
   directory: "/"
   schedule:
     interval: daily
-    timezone: Europe/Berlin
-  open-pull-requests-limit: 10
+    timezone: Europe/Amsterdam
+- package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      timezone: Europe/Amsterdam
+      interval: "daily"
+
