--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AVANS_KEY=null
+AVANS_SECRET=null
+AVANS_ID=null
