Added environment variables for redirect uri and Avans API endpoint

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 AVANS_KEY=null
 AVANS_SECRET=null
 AVANS_ID=null
+AVANS_ENDPOINT=https://publicapi.avans.nl/oauth
+AVANS_REDIRECT_URI=http://127.0.0.1:8000
