--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,6 +20,8 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install oauth
       run: sudo apt-get install php-oauth
+    - name: Update lockfile
+      run: composer update --lock
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
