--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '7.3'
+        extensions: oauth
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
