--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.2",
+        "spatie/laravel-view-models": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
