--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "hot": "mix watch --hot",
     "prod": "npm run production",
     "production": "mix --production",
-    "format": "prettier --write \"**/*.{js,json,less,css,md,html,php}\"",
-    "format:check": "prettier --loglevel debug --check \"**/*.{js,json,less,css,md,html,php}\""
+    "format": "npx prettier --write \"**/*.{js,json,less,css,md,html,php}\"",
+    "format:check": "npx prettier --loglevel debug --check \"**/*.{js,json,less,css,md,html,php}\""
   },
   "devDependencies": {
+    "@prettier/plugin-php": "^0.16.1",
     "axios": "^0.21",
     "laravel-mix": "^6.0.6",
     "lodash": "^4.17.19",
-    "postcss": "^8.1.14"
+    "postcss": "^8.1.14",
+    "prettier": "^2.2.1"
   }
 }
