--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,11 @@
-# For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.test:
+    laravel:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.0
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: sail-8.0/app
+            context: .
+            dockerfile: Laravel.Dockerfile
         ports:
             - '${APP_PORT:-80}:80'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
         volumes:
             - '.:/var/www/html'
         networks:
