--- a/.prettierignore
+++ b/.prettierignore
@@ -5,3 +5,8 @@ vendor/
 .idea/
 database/migrations/
 storage/
+public/css/app.css
+public/js/app.js
+composer.json
+composer.lock
+package-lock.json
