--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "spatie/laravel-view-models": "^1.3"
   },
   "require-dev": {
+    "brianium/paratest": "^6.2",
     "facade/ignition": "^2.5",
     "fakerphp/faker": "^1.9.1",
     "laravel/breeze": "^1.1",
