--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,6 +36,11 @@ jobs:
         mysql root password: 'root' # Required if "mysql user" is empty, default is empty. The root superuser password
         mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
         mysql password: 'developer' # Required if "mysql user" exists. The password for the "mysql user"
+    - name: Wait for MySQL
+      run: |
+          while ! mysqladmin ping --host=127.0.0.1 --password=root --silent; do
+            sleep 1
+          done
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
