--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -47,6 +47,6 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 3306
         DB_DATABASE: 'project_agile'
-        DB_USERNAME: root
-        DB_PASSWORD: root
+        DB_USERNAME: 'developer'
+        DB_PASSWORD: 'developer'
       run: vendor/bin/phpunit
