--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,7 +25,7 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - uses: mirromutth/mysql-action@v1.1
+    - uses: haltuf/mysql-action@master
       with:
         host port: 3306 # Optional, default value is 3306. The port of host
         container port: 3307 # Optional, default value is 3306. The port of container
