--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.2.1",
     "postcss-import": "^12.0.1",
     "prettier": "^2.2.1",
+    "sweetalert2": "^10.15.7",
     "tailwindcss": "^2.0.2"
   }
 }
