--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -47,6 +47,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
           # Don't push draft pull requests
           push: ${{ github.event.pull_request.draft == false }}
           tags: lordchunk/project-agile:${{ env.BRANCH_NAME }}
