--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Project Agile
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
+# MySQL config
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -14,9 +15,12 @@ DB_DATABASE=project_agile
 DB_USERNAME=root
 DB_PASSWORD=
 
+# SQLite config
+# DB_CONNECTION=sqlite
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -31,9 +35,3 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-AVANS_KEY=null
-AVANS_SECRET=null
-AVANS_ID=null
-AVANS_ENDPOINT=https://publicapi.avans.nl/oauth
-AVANS_REDIRECT_URI=http://127.0.0.1:8080
