Create sqlite db

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,4 +27,6 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: ''
-      run: vendor/bin/phpunit
+      run: |
+        touch ./database/database.sqlite
+        vendor/bin/phpunit
