--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "laravel-mix": "^6.0.19",
     "lodash": "^4.17.21",
     "postcss": "^8.2.15",
-    "postcss-import": "^12.0.1",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.3.0",
     "sweetalert2": "^10.15.7",
     "tailwindcss": "^2.0.2"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.9.2"
   }
 }
