--- a/.env.example
+++ b/.env.example
@@ -8,15 +8,16 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 # MySQL config
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=project_agile
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=project-agile
+DB_USERNAME=root
+DB_PASSWORD=
 
 # SQLite config
-DB_CONNECTION=sqlite
+# DB_CONNECTION=sqlite
+# DB_DATABASE=:memory:
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
