--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "laravelcollective/html": "^6.2",
     "lusitanian/oauth": "^0.8.11",
     "spatie/laravel-permission": "^4.0",
-    "spatie/laravel-view-models": "^1.3"
+    "spatie/laravel-view-models": "^1.3",
+    "ext-json": "*"
   },
   "require-dev": {
     "brianium/paratest": "^6.2",
