--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
+  "endOfLine": "lf",
   "printWidth": 145,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "endOfLine": "crlf",
   "arrowParens": "avoid",
   "bracketSpacing": true
 }
