--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "hot": "mix watch --hot",
     "prod": "npm run production",
     "production": "mix --production",
-    "fordmat": "npx prettier --write \"**/*.{js,json,less,css,md,html,php}\"",
+    "format": "npx prettier --write \"**/*.{js,json,less,css,md,html,php}\"",
     "format:check": "npx prettier --loglevel debug --check \"**/*.{js,json,less,css,md,html,php}\""
   },
   "devDependencies": {
