--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.3|^8",
+    "ext-json": "*",
     "fakerphp/faker": "^1.13",
     "fideloper/proxy": "^4.4",
     "fruitcake/laravel-cors": "^2.0",
@@ -17,9 +18,10 @@
     "laravel/tinker": "^2.5",
     "laravelcollective/html": "^6.2",
     "lusitanian/oauth": "^0.8.11",
+    "maatwebsite/excel": "^3.1",
+    "phpoffice/phpspreadsheet": "^1.18",
     "spatie/laravel-permission": "^4.0",
-    "spatie/laravel-view-models": "^1.3",
-    "ext-json": "*"
+    "spatie/laravel-view-models": "^1.3"
   },
   "require-dev": {
     "brianium/paratest": "^6.2",
