--- a/.gitignore
+++ b/.gitignore
@@ -86,5 +86,5 @@ fabric.properties
 
 # Excelfiles
 storage/framework/laravel-excel
-storage\testFiles\~$normalImport.xlsx
-storage\testFiles\~$wrongHeaderImport.xlsx
+storage/testFiles/~$normalImport.xlsx
+storage/testFiles/~$wrongHeaderImport.xlsx
